2007-12-20  Nicola Pero  <nicola.pero@meta-innovation.com>

	* PCMakefileFactory.m ([-createPreambleForProject:]): Output the
	-l flags in the ADDITIONAL_GUI_LIBS variable, not the
	ADDITIONAL_LDFLAGS one.  This should fix linking applications on
	Windows, but will not work well for linking non-GUI libraries.
	ProjectCenter needs to be extended to allow specifying
	ADDITIONAL_TOOL_LIBS and ADDITIONAL_OBJC_LIBS on the gui.

2007-12-13  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile.preamble (ADDITIONAL_LIB_DIRS): Improved linking to
	the ProjectCenter framework when it's not installed yet so that it
	should work on non-flattened layouts.
	* Modules/GNUmakefile.bundles (ADDITIONAL_LIB_DIRS): Same change.
	(BUNDLE_INSTALL_DIR): Use GNUSTEP_APPS, not GNUSTEP_SYSTEM_ROOT.

2007-09-27 Sergii Stoian <stoyan255@gmail.com>

	* Framework/PCBundleManager.m,
	* Headers/ProjectCenter/PCBundleManager.h: Make massive cleaup.
	some methods changed, some deleted, some added.
	* Framework/PCProjectManager.m,
	* Framework/PCProjectEditor.m: Make use of changed PCBundleManager.
	* TextFinder.m:
	(-enterSelection:): Add sanity check for text variable.
	(-jumpToSelection:): Ditto.
	* Modules/Parsers/ProjectCenter/Resources/Info.table: Fix value of
	"Name" key.
	* Headers/Protocols/CodeEditor.h: Remove declaration of 
	openExternalEditor:withPath:projectEditor: method. It will be provided
	by Custom.editor bundle (will be added soon).
	* Headers/ProjectCenter/PCProjectEditor.h: Cleanup.

2007-09-24 Sergii Stoian <stoyan255@gmail.com>

	* English.lproj/FindPanel.gorm: Added Find panel.
	* PCMenuController.m: Added Find panel support.
	* TextFinder.[hm]: Added implementation of Find panel.

2007-08-29 Sergii Stoian <stoyan255@gmail.com>

	* Frameworks/PCFileManager.m:
	(-filesForOpenOfType:multiple:title:accView:): Removed
	(-fileForSaveOfType:title:accView:): Removed.
	(-filesForAddOfTypes:): Removed.
	(-filesOfTypes:operation:multiple:title:accView:): Implemented. 