@@ -19,27 +19,27 @@ ProjectCenter 0.4                                               Owner/Status
 ProjectCenter 0.5
 -----------------
 
-- Create ProjectWindow GORM file                                [done!]
+- Create ProjectWindow GORM file                                 [done!]
 - Add "Framework" project type                                  [done!]
 - Add "Resource Set" project type                               [done!]
 - Implement on demand loading of bundles                        [done!]
 - Localization support for projects                             [done!]
 + Finish save/restore size of split views in Project Window     [done!]
 --- Project Editor:
-  - Implement on demand loading (editor for file type)          [done!]
-  - Open some files read only (Supporting Files)                [done!]
+  - Implement on demand loading (editor for file type)           [done!]
+  - Open some files read only (Supporting Files)                 [done!]
   - Implement code parser (get it from CodeEditor?)             [done!]
-  - Project Browser should show file structure.                 [done!]
-  - Click on Browser item should move cursor to line in file    [done!]
+  - Project Browser should show file structure.                  [done!]
+  - Click on Browser item should move cursor to line in file     [done!]
 --- Project Builder:
-  - Create panel and builder GORM files                         [done!]
+  - Create panel and builder GORM files                          [done!]
   - Implement root build directory handling                     [done!]
   - Finish options handling                                     [done!]
   - Parse gcc output                                            [95% done!]
   - Display warnings,errors,options etc. as clickable list      [done!]
 - GNUstep make version 2.0 compliance                           [done!]
-- Finish FileNameIcon (draggable, files can be dragged to it)   stoyan
-- Save last used path separately for different file panels      [done!]
+- Finish FileNameIcon (draggable, files can be dragged to it)    stoyan
+- Save last used path separately for different file panels       [done!]
 - Review all situations when dialogs must be  popped up         stoyan
 
 ProjectCenter 0.6
